fixed is-visible bug

--- a/packages/style/pop/_ec-pop_default.scss
+++ b/packages/style/pop/_ec-pop_default.scss
@@ -5,12 +5,14 @@
   overflow: hidden;
 
   .ec-pop-header {
+    @extend .title !optional;
     flex-grow: 0;
   }
 
   .ec-pop-body {
     flex-grow: 1;
     overflow-y: auto;
+    overscroll-behavior-y: contain
   }
 
   .ec-pop-footer {
