--- a/packages/ui/src/pop/pop.component.scss
+++ b/packages/ui/src/pop/pop.component.scss
@@ -7,7 +7,7 @@
     opacity: 0;
     display: none;
 
-    &.visible {
+    &.is-visible {
       opacity: 1;
       display: inherit;
     }
@@ -28,7 +28,7 @@
       flex-direction: column;
       align-items: center;
 
-      &.visible {
+      &.is-visible {
         display: flex !important;
       }
 
